5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1771_1583.log
== SUBMITION (2019-05-25 15:35:17) 
-- CODE:
from numpy import*
n=input("digite o numero:")
copy=""
i=0
while(i<len(num)):
	if((i+1)%3==0 and i<(len(n)-1)):
		copy=copy+str(n[i])+"."
	else:
		copy=copy+str(n[i])
	i=i+1
print(copy)
-- EXECUTION TIME:
0.448589
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1583/main.py", line 5, in <module>
    while(i<len(num)):
NameError: name 'num' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 15:35:28) 
-- CODE:
from numpy import*
n=input("digite o numero:")
copy=""
i=0
while(i<len(num)):
	if((i+1)%3==0 and i<(len(n)-1)):
		copy=copy+str(n[i])+""
	else:
		copy=copy+str(n[i])
	i=i+1
print(copy)
-- EXECUTION TIME:
0.358728
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1583/main.py", line 5, in <module>
    while(i<len(num)):
NameError: name 'num' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 15:35:48) 
-- CODE:
from numpy import*
n=input("digite o numero:")
copy=""
i=0
while(i<len(n)):
	if((i+1)%3==0 and i<(len(n)-1)):
		copy=copy+str(n[i])+"."
	else:
		copy=copy+str(n[i])
	i=i+1
print(copy)
-- EXECUTION TIME:
0.450386
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
